<resources>
    <string name="app_name">Kiosk</string>
    <string name="english">English</string>
    <string name="set_korean">가나다</string>
    <string name="select_language">언어를 선택해주세요</string>
    <string name="set_real">실전</string>
    <string name="set_practice">연습</string>
    <string name="text_size_small">작게</string>
    <string name="text_size_medium">중간</string>
    <string name="text_size_big">크게</string>
    <string name="next">다음</string>
    <string name="previous">이전</string>
    <string name="next_2">저장</string>
    <string name="previous_2">이전</string>
    <string name="speed_fast">빠르게</string>
    <string name="speed_normal">중간</string>
    <string name="speed_slow">느리게</string>
    <string name="volume_medium">중간</string>
    <string name="volume_up">크게</string>
    <string name="previous_3">이전</string>
    <string name="next_0">다음</string>
    <string name="volume_down">작게</string>
    <string name="food">패스트푸드</string>
    <string name="bus">버스</string>
    <string name="hospital">병원</string>
    <string name="store">매장</string>
    <string name="takeout">포장</string>
    <string name="select_menu">1. 메뉴 선택</string>
    <string name="arrow_1"><![CDATA[->]]></string>
    <string name="payment">2. 세부 선택</string>
    <string name="arrow_2"><![CDATA[->]]></string>
    <string name="complete">3. 결제</string>
    <string name="drink">음료</string>
    <string name="birger">버거</string>
    <string name="side">사이드</string>
    <string name="shopping_basket">선택한 음식 표시</string>
    <string name="make_a_payment">결제하기</string>
    <string name="cancle">취소하기</string>
    <string name="select_menu_2">1. 메뉴 선택</string>
    <string name="arrow_3"><![CDATA[->]]></string>
    <string name="payment_2">2. 결제</string>
    <string name="arrow_4"><![CDATA[->]]></string>
    <string name="complete_2">3. 완료</string>
    <string name="drink_2">음료</string>
    <string name="burger_2">버거</string>
    <string name="side_2">사이드</string>
    <string name="shopping_basket_2">선택한 음식 표시</string>
    <string name="make_a_payment_2">결제하기</string>
    <string name="cancle_2">취소하기</string>
    <string name="korean_text">가나다</string>
    <string name="volume_speed_slow">느리게</string>
    <string name="volume_speed_medium">보통</string>
    <string name="volume_speed_fast">빠르게</string>
    <string name="volume_size_down">작게</string>
    <string name="volume_size_medium">중간</string>
    <string name="volume_size_up">크게</string>
    <string name="receipt">접 수 하 기</string>
    <string name="acceptance">수납 및 처방전 발행</string>
    <string name="food_2">음식점</string>
    <string name="bus_2">버스</string>
    <string name="hospital_2">병원</string>
    <string name="hospital_list">접수/수납을 하시려면 아래 버튼을 선택해주세요!</string>
    <string name="hospital_list_2">바코드가 없는 경우 주민등록번호 입력해주세요</string>
    <string name="accept_personal_information">개인정보 수집 동의(필수)</string>
    <string name="ssn">주민등록번호 입력(- 제외)</string>
    <string name="num_1_btn">1</string>
    <string name="num_2_btn">2</string>
    <string name="num_3_btn">3</string>
    <string name="num_4_btn">4</string>
    <string name="num_5_btn">5</string>
    <string name="num_6_btn">6</string>
    <string name="num_7_btn">7</string>
    <string name="num_8_btn">8</string>
    <string name="num_9_btn">9</string>
    <string name="num_0_btn">0</string>
    <string name="num_CL_btn">정정</string>
    <string name="check">확인</string>
    <string name="medical_Department">진료받기 원하시는 진료과목을 선택해주세요.</string>
    <string name="respiratory">호흡기 내과</string>
    <string name="cardiology">심장내과</string>
    <string name="neurosurgery">신경외과</string>
    <string name="orthopedics">정형외과</string>
    <string name="urology">비뇨기과</string>
    <string name="department_Family_Medicine">가정의학과</string>
    <string name="gastroenterology">소화기내과</string>
    <string name="hostital_2">접수가 완료되었습니다. 대기공간에서 기다려주세요</string>
    <string name="department_2">TextView</string>
    <string name="wating">대기인수:</string>
    <string name="third_m">3명</string>
    <string name="hospital_day">TextView</string>
    <string name="registration_num">등록번호:</string>
    <string name="_1212">1212</string>
    <string name="hospital_birthday">생년월일:</string>
    <string name="birthday_number">TextView</string>
    <string name="hospital_num">성 명:</string>
    <string name="Hong">홍 길 동</string>
    <string name="printing">접수증 출력</string>
    <string name="hospital_list_3">접수/수납을 하시려면 아래 버튼을 선택해주세요!</string>
    <string name="receipt_2">접수하기</string>
    <string name="ssn_2">주민등록번호 입력(- 제외)</string>
    <string name="hospital_list_4">진료비 영수증이나 진료안내서가 없으신 분은  주민등록번호 입력 후  확인을 눌러주세요.</string>
    <string name="ssn_btn_1">1</string>
    <string name="ssn_btn_2">2</string>
    <string name="ssn_btn_3">3</string>
    <string name="ssn_btn_4">4</string>
    <string name="ssn_btn_5">5</string>
    <string name="ssn_btn_6">6</string>
    <string name="ssn_btn_7">7</string>
    <string name="ssn_btn_8">8</string>
    <string name="ssn_btn_9">9</string>
    <string name="ssn_btn_CL">정정</string>
    <string name="ssn_btn_0">0</string>
    <string name="ssn_btn_check">확인</string>
    <string name="prescription">수납 및 처방전 발행</string>
    <string name="diagnosis_day">진료일</string>
    <string name="diagnosis_list">진료과</string>
    <string name="diagnosis_money">수납 금액</string>
    <string name="diagnosis_check">수납여부</string>
    <string name="diagnosis_total_money">총수납액:</string>
    <string name="_13000">13000원</string>
    <string name="hospital_name">환 자 성 명:</string>
    <string name="Hong_2">홍길동</string>
    <string name="ssn_3">주민등록번호:</string>
    <string name="howto_money">[신용카드결제] 결제방법을 선택해주세요.</string>
    <string name="money_50000">각 진료과 기준 5만원 이상 할부가능</string>
    <string name="pay">지불하기</string>
    <string name="insert_card">그림과 같이 카드를 넣어주세요</string>
    <string name="pay_cancle">취소하기</string>
    <string name="all_money">총 수납액:</string>
    <string name="_13000_2">13000원</string>
    <string name="installment_month">할부개월수:</string>
    <string name="lump_sum">일시불</string>
    <string name="patient_name">환자명</string>
    <string name="Hong_3">홍길동</string>
    <string name="output_status">출력현황</string>
    <string name="_1_1">1/1 출력완료</string>
    <string name="check_2">확인</string>
    <string name="taecho">처음으로 돌아가기</string>
    <string name="acception_2">수납 및 처방전 발행</string>
    <string name="arrow"><![CDATA[->]]></string>
    <string name="textSize">1. 글자 크기</string>
    <string name="volumeSize">2. 음성 크기</string>
    <string name="arrow_5"><![CDATA[->]]></string>
    <string name="arrow_6"><![CDATA[->]]></string>
    <string name="volumeSpeed">3. 음성 속도</string>
    <string name="TextSize">1. 글자 크기</string>
    <string name="TextSize_2">1. 글자 크기</string>
    <string name="arrow_7"><![CDATA[->]]></string>
    <string name="volumeSpeed_2">2. 음성 크기</string>
    <string name="arrow_8"><![CDATA[->]]></string>
    <string name="volumeSpeed_3">3. 음성 속도</string>
    <string name="VolumeSize">2. 음성 크기</string>
    <string name="arrow_9"><![CDATA[->]]></string>
    <string name="VolumeSpeed">3. 음성 속도</string>
    <string name="select_payment">결제 방법을 선택해 주세요</string>
    <string name="card_payment">카드 결제</string>
    <string name="mobile_gift_certificate">모바일 상품권</string>
    <string name="delete">삭제</string>
    <string name="total">합계</string>
    <string name="add_order">추가 주문</string>
    <string name="complete_order">주문 완료</string>
    <string name="home">처음으로</string>
    <string name="help_features">도움 기능</string>
    <string name="enjoy_together">함께 즐기면 더욱 좋습니다</string>
    <string name="deselect">선택 안함</string>
    <string name="order_history">주문 내역</string>
    <string name="cancel_no">취소</string>
    <string name="add_to_cart">장바구니 추가</string>
    <string name="choose_drink">세트메뉴 음료를 선택하세요</string>
    <string name="choose_side">세트메뉴 사이드를 선택하세요</string>
    <string name="big_mc">빅맥</string>
    <string name="set_menu">세트</string>
    <string name="large_menu">라지 세트</string>
    <string name="check_order">주문 확인하기</string>
    <string name="single_item">단품</string>
    <string name="order_to_set">세트로 주문하시겠습니까?</string>
    <string name="big_mc_set">빅맥 세트</string>
    <string name="french_fries">후렌치 후라이</string>
    <string name="_13000_3">13000원</string>
    <string name="go_home">처음으로 돌아가기</string>
    <string name="b_time">시간</string>
    <string name="b_ticket">승차권 구매</string>
    <string name="b_reserved">예매한 승차권</string>
    <string name="b_refund">승차권 환불</string>
    <string name="b_startdate">출발일</string>
    <string name="b_Mokpo1">목포</string>
    <string name="b_arrive">도착지</string>
    <string name="b_nextbus">출발 1분전부터는 발권되지 않습니다.   다음 출발 차량을 이용해주세요</string>
    <string name="b_gofirst">처음 화면으로 돌아가기</string>
    <string name="b_Seoul1">서울특별시</string>
    <string name="b_Incheon1">인천/경기</string>
    <string name="b_Kangwon1">강원도</string>
    <string name="b_Sejong1">대전/세종</string>
    <string name="b_Chungnam1">충청남도</string>
    <string name="b_Chungbuk1">충청북도</string>
    <string name="b_Kwangju1">광주/전남</string>
    <string name="b_Jeonbuk1">전라북도</string>
    <string name="b_Busan1">부산/경남</string>
    <string name="b_Daegu1">대구/경북</string>
    <string name="b_Seoul2">서울특별시</string>
    <string name="b_Gyeongi1">인천/경기</string>
    <string name="b_Kangwon2">강원도</string>
    <string name="b_daejun">대전/세종</string>
    <string name="b_Chungnam2">충청남도</string>
    <string name="b_Chungbuk2">충청북도</string>
    <string name="b_junnam">광주/전남</string>
    <string name="b_Jeonbuk2">전라북도</string>
    <string name="b_Busan2">부산/경남</string>
    <string name="b_Daegu2">대구/경북</string>
    <string name="b_Seoul3">서울특별시</string>
    <string name="b_Incheeon3">인천/경기</string>
    <string name="b_Kangwon">강원도</string>
    <string name="b_Sejong">대전/세종</string>
    <string name="b_Chungnam">충청남도</string>
    <string name="b_Chungbuk">충청북도</string>
    <string name="b_Kwangju">광주/전남</string>
    <string name="b_Jeonbuk">전라북도</string>
    <string name="b_Busan">부산/경남</string>
    <string name="b_Daegu">대구/경북</string>
    <string name="b_Mokpo">목포</string>
    <string name="b_arrive1">목적지</string>
    <string name="b_starttime">출발 시간</string>
    <string name="b_bustype">버스 종류</string>
    <string name="b_usetime">소요 시간</string>
    <string name="b_seatcollect">좌석 선택</string>
    <string name="_8_30">8시 30분</string>
    <string name="b_honor">우등버스</string>
    <string name="_40">40분</string>
    <string name="_8_40">8시 40분</string>
    <string name="b_speedbus">고속버스</string>
    <string name="_1_10">1시간 10분</string>
    <string name="_8_50">8시 50분</string>
    <string name="b_normal">일반버스</string>
    <string name="_1_30">1시 30분</string>
    <string name="b_seat1">좌석 선택</string>
    <string name="b_all1">매진</string>
    <string name="_9_20">9시 20분</string>
    <string name="b_honorbus1">우등버스</string>
    <string name="_40_1">40분</string>
    <string name="b_all2">매진</string>
    <string name="b_all3">매진</string>
    <string name="_9_40">9시 40분</string>
    <string name="b_speedbus2">고속버스</string>
    <string name="_1_10_1">1시간 10분</string>
    <string name="b_seat2">좌석 선택</string>
    <string name="b_normal2">일반버스</string>
    <string name="_1_30_1">1시간 30분</string>
    <string name="_10_00">10시 00분</string>
    <string name="b_seat3">좌석 선택</string>
    <string name="b_alll1">매진</string>
    <string name="b_alll2">매진</string>
    <string name="b_alll3">매진</string>
    <string name="b_alll4">매진</string>
    <string name="b_alll5">매진</string>
    <string name="b_alll6">매진</string>
    <string name="b_opendoor">출입문</string>
    <string name="b_aisle">통로</string>
    <string name="b_alll7">매진</string>
    <string name="b_alll8">매진</string>
    <string name="b_alll9">매진</string>
    <string name="fastfood">음식점</string>
    <string name="busbut">버스</string>
    <string name="hospita">병원</string>
    <string name="bus_inputreserved">예매조회 정보를 입력하세요</string>
    <string name="bus_goback">뒤로가기</string>
</resources>