<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Kiosk_14_reserved">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/hos_bar_txt"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5"
            android:gravity="center"
            android:text="@string/bus_inputreserved"
            android:textSize="@dimen/font_size_medium" />

        <CheckBox
            android:id="@+id/personal_Information"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.7"
            android:text="@string/accept_personal_information"
            android:textSize="@dimen/font_size_medium" />

        <TextView
            android:id="@+id/SSN"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.9"
            android:gravity="center"
            android:hint="@string/ssn"
            android:maxLength="14"
            android:textSize="@dimen/font_size_medium" />
    </LinearLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.8">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/num_1"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="put_n"
                android:text="@string/num_1_btn"
                android:textSize="@dimen/font_size_medium" />

            <Button
                android:id="@+id/num_2"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="put_n"
                android:text="@string/num_2_btn"
                android:textSize="@dimen/font_size_medium" />

            <Button
                android:id="@+id/num_3"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="put_n"
                android:text="@string/num_3_btn"
                android:textSize="@dimen/font_size_medium" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/num_4"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="put_n"
                android:text="@string/num_4_btn"
                android:textSize="@dimen/font_size_medium" />

            <Button
                android:id="@+id/num_5"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="put_n"
                android:text="@string/num_5_btn"
                android:textSize="@dimen/font_size_medium" />

            <Button
                android:id="@+id/num_6"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="put_n"
                android:text="@string/num_6_btn"
                android:textSize="@dimen/font_size_medium" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/num_7"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="put_n"
                android:text="@string/num_7_btn"
                android:textSize="@dimen/font_size_medium" />

            <Button
                android:id="@+id/num_8"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="put_n"
                android:text="@string/num_8_btn"
                android:textSize="@dimen/font_size_medium" />

            <Button
                android:id="@+id/num_9"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="put_n"
                android:text="@string/num_9_btn"
                android:textSize="@dimen/font_size_medium" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <Button
                android:id="@+id/CL"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="put_n"
                android:text="@string/num_CL_btn"
                android:textSize="@dimen/font_size_medium" />

            <Button
                android:id="@+id/num_0"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="put_n"
                android:text="@string/num_0_btn"
                android:textSize="@dimen/font_size_medium" />

            <Button
                android:id="@+id/Check_2"
                android:layout_width="0dp"
                android:layout_height="120dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:gravity="center"
                android:onClick="goto_kiosk_26_2"
                android:text="@string/check"
                android:textSize="@dimen/font_size_medium" />
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:gravity="center">

        <Button
            android:id="@+id/button22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="goto_Back"
            android:text="@string/bus_goback"
            android:textSize="@dimen/font_size_medium" />
    </LinearLayout>

</LinearLayout>