<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Kiosk_8">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:gravity="center">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="center"
            android:text="@string/select_menu_2"
            android:textAlignment="center"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/arrow_3"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/payment_2"
            android:textAlignment="center"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/arrow_4"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/complete_2"
            android:textAlignment="center"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="462dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/burger_Btn"
                android:layout_width="100dp"
                android:layout_height="130dp"
                android:text="@string/burger_2"
                android:textSize="18sp" />

            <Button
                android:id="@+id/side_Btn"
                android:layout_width="100dp"
                android:layout_height="130dp"
                android:text="@string/side_2"
                android:textSize="18sp" />

            <Button
                android:id="@+id/drink_Btn"
                android:layout_width="100dp"
                android:layout_height="130dp"
                android:text="@string/drink_2"
                android:textSize="18sp" />

        </LinearLayout>

        <TableLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageButton
                    android:id="@+id/bulgogi_Btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="5dp"
                    app:srcCompat="@drawable/bilgogi" />

                <ImageButton
                    android:id="@+id/cheese_Btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/cheese"
                    tools:layout_marginLeft="10dp" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageButton
                    android:id="@+id/shrimp_Btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:layout_marginRight="5dp"
                    app:srcCompat="@drawable/shrimp" />

                <ImageButton
                    android:id="@+id/truple_Btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/truple"
                    tools:layout_marginLeft="10dp" />
            </TableRow>
        </TableLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="30dp"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/shopping_basket_2"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/liquidate_Btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:text="@string/make_a_payment_2"
                android:textSize="18sp" />

            <Button
                android:id="@+id/cancel_Btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:text="@string/cancle_2"
                android:textSize="18sp"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>